# mydev

./: README.md  package.txt
GTKMM/: CMakeLists.txt
JsonReadWrite/: in.json  jsonreadwrite
JsonReadWrite/cmakeLIST/: CMakeLists.txt  main.cpp  out.json
JsonReadWrite/cmakeLIST/plotform/linux/: armv7l.cmake
JsonReadWrite/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
ROS/Node1_frontend/: JsonReadWrite.cpp  JsonReadWrite.h  gui.cpp  gui.h  main.cpp  ros_talker.cpp  ros_talker.h
ROS/Node1_frontend/glade/: gui.glade~
ROS/Node1_frontend/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
ROS/Node2_modbus/: config.h  config.json  config.txt  jsonHandling.cpp  jsonHandling.h  main.cpp  modbus.cpp  modbus.h  ros_listner.cpp  ros_listner.h
ROS/Node2_modbus/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
ROS/Node2_modbus/nbproject/private/: private.xml
ROS/beginner_tutorials/: CMakeLists.txt
ROS/beginner_tutorials/src/: listener  listner.cpp  talker  talker.cpp
bluetooth/: CMakeLists.txt  README.md
bluetooth/src/: CMakeLists.txt  main.cpp  rfcomm-client.c  rfcomm-server.c
ftp/: CMakeLists.txt  client.c  server.c
gtk/: CMakeLists.txt
lwebsocket/: CMakeLists.txt
lwebsocket/client/inc/: client.h
lwebsocket/client/src/: client  main.cpp
lwebsocket/server/src/: main.cpp  server
lwebsocket/test/: CMakeLists.txt  test_client.cpp  test_server.cpp
modbus_rtu/: BUILD.txt  CMakeLists.txt
modbus_rtu/platform/Linux/: armv7l.cmake
modbus_rtu/src/: modbus_read.cpp  modbus_write.cpp
modbus_tcp/: CMakeLists.txt  modbus_tcp_read.cpp  modbus_tcp_write.cpp
mqqt-dev/publisher/conf/: local.json
mqqt-dev/publisher/inc/: publisher.h
mqqt-dev/publisher/src/: main.cpp  publisher.cpp
mqqt-dev/subsriber/: CMakeLists.txt
mqqt-dev/subsriber/conf/: conf.json
mqqt-dev/subsriber/inc/: subscriber.h
mqqt-dev/subsriber/src/: subscriber.cpp
socket/: CMakeLists.txt  client.c  server.c
sqlite3/: CMakeLists.txt
sqlite3/inc/: database.h
sqlite3/src/: database.cpp  main.cpp
