cmake_minimum_required(VERSION 3.5.0)
project(GTKMM_CMAKE)
set(EXECUTABLE_OUTPUT_PATH "bin")
find_package(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTKMM3 gtkmm-3.0)
include_directories(${GTKMM3_INCLUDE_DIRS})
link_directories(${GTKMM3_LIBRARY_DIRS})
add_definitions(${GTKMM3_CFLAGS_OTHER})
add_executable(hello src/main.cpp)
target_link_libraries(hello ${GTKMM3_LIBRARIES})