cmake_minimum_required(VERSION 3.5.0)
project(helloGTK)

find_package(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
message("${GTK3_INCLUDE_DIRS}")
include_directories(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
set(EXECUTABLE_OUTPUT_PATH "bin")
add_definitions(${GTK3_CFLAGS_OTHER})
add_executable(hello src/main.cpp)
target_link_libraries(hello ${GTK3_LIBRARIES})
