cmake_minimum_required(VERSION 3.5.0)
project(test_websocket)
find_package(FindBoost)
if(FindBoost)
message("Boost Found")
endif()
find_library(Boost)

find_library(CHRONO chrono)
message("${CHRONO}")
find_library(SYSTEM system)
message("${SYSTEM}")
find_library(RANDOM random)
message("${RANDOM}")
find_library(THREAD pthread)
message("${THREAD}")
add_executable(test_server test_server.cpp)
#add_executable(test_client test_client.cpp)
target_link_libraries(test_server "${CHRONO}" "${SYSTEM}" "${RANDOM}" "${THREAD}" )
#target_link_libraries(test_server "${CHRONO}" "${SYSTEM}" "${RANDOM}" "${THREAD}" )