cmake_minimum_required(VERSION 3.5.0)
project(Bluetooth)
find_library(BLUETOOTH bluetooth)
if( NOT BLUETOOTH)
message("libbluetooth.so is missing")
message(FATAL_ERROR "libbluetooth-dev pkg not found")
else()
message("libbluetooth-dev found!!!")
endif()


add_executable(l2cap-client src/l2cap-client.c)
target_link_libraries(l2cap-client ${BLUETOOTH} )
add_executable(l2cap-server src/l2cap-server.c)
target_link_libraries(l2cap-server ${BLUETOOTH} )

add_executable(register_service src/register_service.c)
target_link_libraries(register_service ${BLUETOOTH} )
add_executable(rfcomm-client src/rfcomm-client.c)
target_link_libraries(rfcomm-client ${BLUETOOTH} )
add_executable(rfcomm-server src/rfcomm-server.c)
target_link_libraries(rfcomm-server ${BLUETOOTH} )
add_executable( service-search-sdp src/service-search-sdp.c)
target_link_libraries(service-search-sdp ${BLUETOOTH} )
add_executable(simplescan src/simplescan.c)
target_link_libraries(simplescan  ${BLUETOOTH} )
