cmake_minimum_required(VERSION 3.5.0)
project(test_websocket)
#set(CMAKE_CXX_STANDARD 11)
#include_directories(../websocketpp/)
find_library(BOOST_CHRONO boost_chrono)
#message("${CHRONO}")
find_library(BOOST_SYSTEM boost_system)
#message("${SYSTEM}")
find_library(BOOST_RANDOM boost_random)
#message("${RANDOM}")
find_library(BOOST_THREAD boost_thread)
find_library(THREAD pthread)
#message("${THREAD}")
add_executable(test_server test_server.cpp)
add_executable(test_client test_client.cpp)
target_link_libraries(test_server "${BOOST_CHRONO}" "${THREAD}" "${BOOST_SYSTEM}" "${BOOST_RANDOM}" "${BOOST_THREAD}" )
target_link_libraries(test_client "${BOOST_CHRONO}" "${THREAD}" "${BOOST_SYSTEM}" "${BOOST_RANDOM}" "${BOOST_THREAD}" )
