cmake_minimum_required(VERSION 3.5.0)
project(mqqt)
include_directories(inc)
find_package(PkgConfig REQUIRED)
find_library(JSON jsoncpp)
#LINK_DIRECTORIES(/usr/sbin/)
find_library(mqqt mosquitto)
SET(CMAKE_CXX_STANDARD 14)
PKG_CHECK_MODULES(GTKMM3 gtkmm-3.0)
include_directories(${GTKMM3_INCLUDE_DIRS})
link_directories(${GTKMM3_LIBRARY_DIRS})
add_definitions(${GTKMM3_CFLAGS_OTHER})
FILE(GLOB SRCS src/*.cpp )
add_executable(guiapp ${SRCS})
target_link_libraries(guiapp ${GTKMM3} ${JSON} ${mqqt})